Refactor input stream handling and add utility method for reading fully